<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="offer"
            type="com.mis.route.domain.models.offer.Offer" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="396dp"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:imageResource="@{offer.imageResId}"
                tools:src="@drawable/image_beauty_products" />

            <TextView
                android:id="@+id/up_to_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="96dp"
                android:text="@string/up_to"
                android:textAppearance="@style/up_to_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percent_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:text="@{offer.formattedPercent}"
                android:textAppearance="@style/percent_text"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/up_to_textview"
                app:layout_constraintTop_toBottomOf="@id/up_to_textview"
                tools:text="25%" />

            <TextView
                android:id="@+id/off_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:text="@string/off"
                android:textAppearance="@style/for_text"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/percent_textview"
                app:layout_constraintStart_toEndOf="@id/percent_textview"
                app:layout_constraintTop_toTopOf="@+id/percent_textview" />

            <TextView
                android:id="@+id/target_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:text="@{offer.targetText}"
                android:textAppearance="@style/target_text"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/up_to_textview"
                app:layout_constraintTop_toBottomOf="@id/percent_textview"
                tools:text="For all Headphones \n&amp; AirPods" />

            <Button
                style="@style/shop_now_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_shop_now_button_background"
                android:text="@string/shop_now"
                app:layout_constraintStart_toStartOf="@id/up_to_textview"
                app:layout_constraintTop_toBottomOf="@id/target_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>