<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/offers_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/image_tools_offer_preview" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/offers_view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/selector_viewpager_dot"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/categories_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/categories"
            android:textAppearance="@style/home_titles"
            app:layout_constraintStart_toStartOf="@id/offers_view_pager"
            app:layout_constraintTop_toBottomOf="@id/offers_view_pager" />

        <TextView
            android:id="@+id/view_all_categories_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/view_all"
            android:textAppearance="@style/home_text"
            app:layout_constraintEnd_toEndOf="@id/offers_view_pager"
            app:layout_constraintTop_toBottomOf="@id/offers_view_pager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="@id/offers_view_pager"
            app:layout_constraintTop_toBottomOf="@id/categories_textview"
            app:spanCount="2"
            tools:listitem="@layout/item_category" />

        <TextView
            android:id="@+id/home_appliances_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/home_appliances"
            android:textAppearance="@style/home_titles"
            app:layout_constraintStart_toStartOf="@id/offers_view_pager"
            app:layout_constraintTop_toBottomOf="@id/categories_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_appliances_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/offers_view_pager"
            app:layout_constraintTop_toBottomOf="@id/home_appliances_textview"
            tools:listitem="@layout/item_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
